change on the dark theme

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </section>
     <section class="conteiner">
         <div class="btn-group" role="group">
-            <button type="button" class="btn btn-primary" id="show">Show history</button>
-            <button type="button" class="btn btn-danger" id="reset">Reset history</button>
+            <button type="button" class="btn btn-info" id="show">Show history</button>
+            <button type="button" class="btn btn-info" id="reset">Reset history</button>
         </div>
         <div id="historyWrap"  class="history-wrap hidden">
             <code id="tmp">History is empty.</code>
