--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button class="btn btn-default col-3" data-value="=">=</button>
         </div>
     </section>
-    <section class="conteiner consoles">
+    <section class="container consoles">
         <div class="btn-group" role="group">
             <button type="button" class="btn history-btn" id="history-btn">History</button>
             <button type="button" class="btn reset-btn" id="reset-btn">Reset history</button>
