--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="container consoles">
         <div class="btn-group" role="group">
             <button type="button" class="btn history-btn" id="history-btn">History</button>
-            <button type="button" class="btn reset-btn" id="reset-btn">Reset history</button>
+            <button type="button" class="btn reset-btn blocked-btn" id="reset-btn">Reset history</button>
         </div>
         <div id="historyWrap"  class="history-wrap hidden">
             <code class="history-default-label">History is empty.</code>
