--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="light">
     <div class="tumbler">
-        <input id="theme" type="checkbox">
+        <input id="themeTumbler" type="checkbox">
     </div>
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
