--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             <button type="button" class="btn reset-btn blocked-btn" id="reset-btn">Reset history</button>
         </div>
         <div id="historyWrap"  class="history-wrap hidden">
-            <code class="history-default-label">History is empty.</code>
+            <!-- <code class="history-default-label">History is empty.</code> -->
             <pre><code id="history"></code></pre>
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
