--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <input id="soundTumbler" type="checkbox" data-sound-mode="mute">
                 Вкл/Откл звук
             </div>
-            <div class="tumbler tumbler-keyboard">
-                <input id="keyboardTumbler" type="checkbox" data-keyboard="off">
-                Вкл/Откл клавиатуру
+            <div class="tumbler tumbler-descriptions">
+                <input id="descriptionsTumbler" type="checkbox" data-keyboard="off">
+                Вкл/Откл подсказки
             </div>
         </div>
     </section>
@@ -36,7 +36,7 @@
         </div>
     </section>
     <section class="container">
-        <div id="calculator" class="row calculator disable-keyboard">
+        <div id="calculator" class="row calculator hedden-keyboard-description">
             <input type="text" id="result" class="form-control result col-12" readonly placeholder="0" value="">
             <button class="btn btn-default col-3" data-value="c">c<span class="description">c</span></button>
             <button class="btn btn-default col-3" data-value="%">%<span class="description">shift 5</span></button>
