add local storage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="py-5 container">
         <div class="tumblers">
             <div class="tumbler tumbler-theme">
-                <input id="themeTumbler" type="checkbox">
+                <input id="themeTumbler" type="checkbox" data-theme="light">
                 Светлая/Темная тема
             </div>
             <div class="tumbler tumbler-sound">
@@ -36,7 +36,7 @@
         </div>
     </section>
     <section class="container">
-        <div id="calculator" class="row calculator hedden-keyboard-description">
+        <div id="calculator" class="row calculator hidden-keyboard-description">
             <input type="text" id="result" class="form-control result col-12" readonly placeholder="0" value="">
             <button class="btn btn-default col-3" data-value="c">c<span class="description">c</span></button>
             <button class="btn btn-default col-3" data-value="%">%<span class="description">shift 5</span></button>
