--- a/index.html
+++ b/index.html
@@ -6,35 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple calculator</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;0,800;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./lib/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body class="light">
-    <section class="py-5 container">
-        <div class="tumblers">
-            <div class="tumbler tumbler-theme">
-                <input id="themeTumbler" type="checkbox" data-theme="light">
-                Светлая/Темная тема
-            </div>
-            <div class="tumbler tumbler-sound">
-                <input id="soundTumbler" type="checkbox" data-sound-mode="mute">
-                Вкл/Откл звук
-            </div>
-            <div class="tumbler tumbler-descriptions">
-                <input id="descriptionsTumbler" type="checkbox" data-keyboard="off">
-                Вкл/Откл подсказки
+    <section class="text-center container">
+        <div class="row">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="title">Calculator</h1>
             </div>
         </div>
     </section>
 
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Simple calculator</h1>
+    <section class="py-5 container">
+        <div class="tumblers">
+            <div class="tumbler tumbler-theme">
+                <input id="themeTumbler" type="checkbox" data-theme="light">
+                Dark theme
+            </div>
+            <div class="tumbler tumbler-sound">
+                <input id="soundTumbler" type="checkbox" data-sound-mode="mute">
+                Sounds
+            </div>
+            <div class="tumbler tumbler-descriptions">
+                <input id="descriptionsTumbler" type="checkbox" data-keyboard="off">
+                Keyboard description
             </div>
         </div>
     </section>
+
+
     <section class="container">
         <div id="calculator" class="row calculator hidden-keyboard-description">
             <input type="text" id="result" class="form-control result col-12" readonly placeholder="0" value="">
